# Triangles

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: bounding_box.hpp  bounding_sphere.hpp  brute_force.hpp  double_comparison.hpp  intersection.hpp  line.hpp  location.hpp  octo_force.hpp  octo_tree.hpp  plane.hpp  point.hpp  segment.hpp  shape.hpp  task.hpp  triangle.hpp  triangle_intersect_algorithms.hpp  vector.hpp
src/: intersection.cpp
task/: CMakeLists.txt  task.cpp
task/brute_force/: CMakeLists.txt  task.cpp
task/octo_force/: CMakeLists.txt  task.cpp
test/: CMakeLists.txt
test/algorithm/: CMakeLists.txt
test/algorithm/src/: case_test.cpp  degenerate_cases_test.cpp  intersection_2D_test.cpp  location.cpp  location_test.cpp  transform_triangle.cpp
test/algorithm_tests/: CMakeLists.txt
test/basic_tests/: CMakeLists.txt
test/end_to_end/: cmp.py  test0_answ  test0_task  test10_answ  test10_task  test11_answ  test11_task  test12_answ  test12_task  test13_answ  test13_task  test14_answ  test14_task  test15_answ  test15_task  test16_answ  test16_task  test17_answ  test17_task  test18_answ  test18_task  test19_answ  test19_task  test1_answ  test1_task  test20_answ  test20_task  test21_answ  test21_task  test22_answ  test22_task  test23_answ  test23_task  test24_answ  test24_task  test25_answ  test25_task  test26_answ  test26_task  test27_answ  (+64 more)
test/include/: algorithm_testing.hpp
test/octo_tree_tests/: CMakeLists.txt
test/shape_tests/: CMakeLists.txt
test/task_test/: CMakeLists.txt
test/test_gen/: cmp.py  test0_answ  test0_task  test10_answ  (+20 more)
(+319 files in other folders)
